# polyplot

./: .gitignore  404.html  CLAUDE.md  README.md  autoresearch_watch.py  index.html  notebook.py  pyproject.toml  quickstart.py  search.json  sitemap.xml  zensical.toml
.github/workflows/: docs.yml
autoresearch/: README.md  watch.py
autoresearch/scripts/: autoresearch_1k.py  autoresearch_alg.py  meshify_benchmark_measure.py  run_experiments.py
docs/: get-started.md  index.md  user-guide.md
get-started/: index.html
polyplot/: __init__.py  _api.py  _autoresearch_knobs.py  _cache.py  _cell_rings.py  _mesh_build.py  _preprocess.py  _tile_export.py  _tile_server.py  _tune.py  _widget.py  widget.css  widget.js
sample_data/: README.md  liver_crop_sample.parquet
scripts/: _test_232.py  make_liver_subset.py  meshify_benchmark_measure.py  run_autoresearch_100.py
tests/: test_meshify_smoke.py
user-guide/: index.html
