[project]
name = "polyplot"
version = "0.1.0"
description = "Three Fiber-based vis widget for 2.5D polygons"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.22",
    "anywidget>=0.9",
    "traitlets>=5",
    "geopandas>=1.0",
    "pyarrow>=16",
    "shapely>=2.0",
    "numpy>=1.26",
    "mapbox-earcut>=1.0",
    "matplotlib>=3.10.8",
    "joblib>=1.5.3",
    "pygltflib>=1.15",
    "numba>=0.65.0",
    "trimesh>=4.11.5",
    "scipy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["polyplot"]

[tool.marimo.save]
# Required for stable `--watch`: otherwise autosave races with external editors
# (e.g. Cursor) and the browser can show stale code vs notebook.py on disk.
autosave = "off"

[tool.uv]
package = true
